--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "secrets---starting-code",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Rupali Banerjee",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -15,5 +14,6 @@
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
     "mongoose-encryption": "^2.1.2"
-  }
+  },
+  "description": ""
 }
